Adding an overpayment warning to the main partial payment screen.

--- a/app/views/v6-pcn/partial-payment-NEW-RULES-ALREADY-PAID.html
+++ b/app/views/v6-pcn/partial-payment-NEW-RULES-ALREADY-PAID.html
@@ -89,7 +89,7 @@ Pay by card
 
             <h2 class="nhsuk-heading-m">You have already paid enough this month</h2>
 
-            <p class="nhsuk-body">You can choose to overpay this month, but this will not count toward your next monthly payment.</p>
+            <p class="nhsuk-body">You can choose to overpay this month, but this amount will not count toward your next monthly payment.</p>
             
             {{ paymentPlan( data.secondPayment, 'true' ) }}
 
