--- a/app/views/v6-pcn/partial-payment-NEW-RULES.html
+++ b/app/views/v6-pcn/partial-payment-NEW-RULES.html
@@ -45,7 +45,7 @@ Pay by card
                   text: 'Amount to pay'
                 },
                 hint: {
-                  text: 'You cannot change this on the next page'
+                  html: 'You cannot change this on the next page'
                 },
                 id: 'amountToPay',
                 name: 'amountToPay',
@@ -54,7 +54,7 @@ Pay by card
                 prefix: '£'
           }) }}
 
-
+          <p class="nhsuk-body">You can choose to overpay this month, but this amount will not count toward your next monthly payment.</p>
               
           <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
               
